@@ -86,3 +86,4 @@ Collate:
     'YT.R'
     'slidify_layouts.R'
     'local_host.R'
+    'is.global.R'
