@@ -25,6 +25,7 @@ export(IE)
 export(IF)
 export(IM)
 export(IM2)
+export(is.global)
 export(IW)
 export(LL)
 export(local_host)
