@@ -24,7 +24,9 @@
 #' be one of the types from \code{slidify_templates} or a path to an .Rmd file.  
 #' This argument will be overrode if a custom reports template is supplied with 
 #' an .Rmd file in the inst directory named slidify.Rmd (\code{/inst/slidify.Rmd}).
-#' @param open logical.  If \code{TRUE} the project will be opened in RStudio.
+#' @param open logical.  If \code{TRUE} the project will be opened in RStudio.  
+#' The default is to test if \code{new_report} is being used in the global 
+#' environment, if it is then the project directory will be opened.  
 #' @param \ldots Other arguments passed to \code{\link[slidify]{author}}.
 #' @section Suggestion: The user may want to set \code{\link[base]{options}} for 
 #' \code{bib.loc}, \code{github.user}, \code{name.reports} 
@@ -62,12 +64,18 @@
 #' @importFrom tools file_path_sans_ext file_ext
 #' @examples 
 #' ## new_report()
+#' 
+#' ## fx <- folder(delete_me)
+#' ## owd <- getwd(); setwd(fx)
+#' ## x <- rdirs(admin, 1:15, c("d", "f", "w"), c(1, 4, 6), text.only = TRUE)
+#' ## lapply(x, new_report)
+#' ## setwd(owd); delete(fx)
 new_report <-
 function(report = "report", template = getOption("temp.reports"), 
     bib.loc = getOption("bib.loc"), name = getOption("name.reports"), 
     github.user = getOption("github.user"), 
     sources = getOption("sources.reports"), path = getwd(), AN.xlsx = TRUE, 
-    slidify = getOption("slidify.template"), open = FALSE, ...) {
+    slidify = getOption("slidify.template"), open = is.global(2), ...) {
 
     if (is.null(template)) template <- "apa6.mod.quant_rnw"
     if (is.numeric(template)) {
