@@ -13,7 +13,9 @@
 #' vignettes directory. 
 #' @param bib.loc Optional path to a .bib resource.
 #' @param name A character string of the user's name to be used on the vignette.
-#' @param open logical.  If \code{TRUE} the project will be opened in RStudio.
+#' @param open logical.  If \code{TRUE} the project will be opened in RStudio.  
+#' The default is to test if \code{new_report} is being used in the global 
+#' environment, if it is then the project directory will be opened.  
 #' @section Suggestion: The user may want to set \code{\link[base]{options}} for 
 #' \code{bib.loc}, \code{name.reports} in the user's primary \code{.Rprofile}:
 #' \enumerate{ 
@@ -33,7 +35,7 @@
 #' ## new_vignette()
 new_vignette <-
 function(vignette = "vignette", type = "rmd", path = getwd(),
-    bib.loc = NULL, name = getOption("name.reports"), open = FALSE) {
+    bib.loc = NULL, name = getOption("name.reports"), open = is.global()) {
 
     ## preparing type
     type <- tolower(type)
